--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "todo_list_my",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
